# libskycalc

./: Makefile.in  README  README.md  config.status  configure  configure.in  install.sh
include/: Makefile  Makefile.in  libskycalc.h
lib/: Makefile  Makefile.in
libsrc/: Makefile  Makefile.in  libdk154sc.c  libskycalc.c
skycalc/: Revisions  skycal.ps  skycal.readme  skycal.tex  skycalc.c  skycalendar.c
