dnl Process this file with autoconf to produce a configure script.
AC_INIT(skycalc/skycalc.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_STRUCT_TM

dnl Checks for library functions.

AC_OUTPUT(Makefile lib/Makefile libsrc/Makefile include/Makefile)
